[레거시 코드 리팩터링 - 2단계] 헤나(박현서) 미션 제출합니다. (#588)
* refactor: 상품 setter 제거

* refactor: 메뉴 상품 setter 제거 후 생성자 추가

* refactor: 메뉴 그룹 setter 제거 후 생성자 추가

* refactor: 주문 항목 setter 제거 후 생성자 추가

* refactor: 주문 setter 제거 후 생성자 추가

* refactor: 단체 지정 setter 제거 후 생성자 추가

* refactor: 메뉴 setter 제거 후 생성자 추가

* refactor: 메뉴 setter 수정 후 생성자 추가

* refactor: 상품 가격 예외 검증을 비즈니스에서 도메인의 역할로 수정

* refactor: 메뉴 가격 예외 검증을 비즈니스에서 도메인의 역할로 수정

* refactor: 메뉴 상품에 메뉴 식별자값 setter 제거

* refactor: 메뉴에 메뉴 상품 목록 setter를 add로 수정

* feat: 메뉴 가격 비교 기능 구현

* feat: 메뉴 주문 항목 setter를 add로 수정

* feat: 단체 지정 내 주문 테이블 setter를 add로 수정

* refactor: 주문 테이블 좌석 상태 변경 기능 리팩터링

* refactor: 상품 JPA 리팩터링

* feat: Price 값객체 구현

* refactor: 메뉴 상품 엔티티 매핑

* refactor: 메뉴 그룹 엔티티 매핑

* refactor: 주문 항목 엔티티 매핑

* refactor: 단체 지정 엔티티 매핑

* refactor: 메뉴 엔티티 매핑

* refactor: 주문 테이블 엔티티 매핑

* refactor: 주문 엔티티 매핑

* fix: 상품 dao 삭제

* refactor: jdbcTemplate을 JpaRepository로 수정

* test: 단체 지정 엔티티 테스트 추가

* refactor: 메뉴 그룹 서비스 의존성 수정

* refactor: 메뉴 서비스 의존성 수정 및 도메인 객체 내부 필드 수정으로 인한 코드 수정

* refactor: 단체 지정 서비스 의존성 수정 및 도메인 객체 내부 필드 수정으로 인한 코드 수정

* refactor: 테이블 서비스 의존성 수정 및 도메인 객체 내부 필드 수정으로 인한 코드 수정

* refactor: 주문 서비스 의존성 수정 및 도메인 객체 내부 필드 수정으로 인한 코드 수정

* refactor: 이름을 값객체로 수정

* refactor: 주문 상태를 String 이 아닌 Enum 으로 수정

* refactor: 수량 값 객체로 수정

* refactor: 상품 생성 요청 객체 수정

* refactor: 주문 항목 일급 컬렉션 적용

* refactor: 상품 등록 요청 정보, 상품 응답 정보 추가

* refactor: 단체 지정 요청 객체 추가

* feat: 메뉴 상품에 상품 가격과 수량의 총합 계산 기능 추가

* feat: 메뉴 상품 목록 객체 추가

* refactor: 가격 합 기능 추가 후 메뉴 상품 목록 가격 총합 기능 수정

* feat: 상품 조회 레포지터리 기본 메서드 구현

* feat: 메뉴 그룹 조회 레포지터리 기본 메서드 구현

* refactor: 메뉴 상품 목록 객체에 메뉴 상품 목록을 추가하는 기능 수정

* refactor: 메뉴에 상품 추가시 가격 검증 기능 수정

* refactor: 메뉴 등록 서비스 기능 수정 및 메뉴 등록 요청 객체 추가

* refactor: 레포지터리 기본 조회 메서드 예외 타입 수정

* feat: 주문 상품에 주문을 할당하는 기능 추가

* feat: 주문 레포지터리 조회 기본 기능 추가

* feat: 주문 상품 목록이 비어있는 주문 생성 기능 추가

* refactor: 주문 컨트롤러 생성 및 조회 객체 추가

