@@ -8,14 +8,20 @@ import kitchenpos.domain.Order;
 import kitchenpos.domain.OrderLineItem;
 import kitchenpos.domain.OrderStatus;
 import kitchenpos.domain.OrderTable;
+import kitchenpos.domain.vo.Name;
+import kitchenpos.domain.vo.Price;
+import kitchenpos.domain.vo.Quantity;
+import kitchenpos.dto.OrderCreateOrderLineItemRequest;
+import kitchenpos.dto.OrderCreateRequest;
+import kitchenpos.dto.OrderResponse;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.Test;
+import org.springframework.dao.EmptyResultDataAccessException;
 
-import java.math.BigDecimal;
 import java.time.LocalDateTime;
-import java.util.Collections;
+import java.util.ArrayList;
 import java.util.List;
 
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
@@ -27,7 +33,7 @@ class OrderServiceTest extends ApplicationTestConfig {
 
     @BeforeEach
     void setUp() {
-        orderService = new OrderService(menuDao, orderDao, orderLineItemDao, orderTableDao);
+        orderService = new OrderService(menuRepository, orderRepository, orderTableRepository);
     }
 
     @DisplayName("새로운 주문 등록")
@@ -38,37 +44,22 @@ class OrderServiceTest extends ApplicationTestConfig {
         @Test
         void success_create() {
             // given
-            final MenuGroup savedMenuGroup = menuGroupDao.save(new MenuGroup("테스트용 메뉴 그룹명"));
-            final Menu savedMenu = menuDao.save(new Menu(
-                    "테스트용 메뉴명",
-                    BigDecimal.ZERO,
-                    savedMenuGroup.getId(),
-                    Collections.emptyList()
+            final Menu savedMenu = createMenu();
+            final OrderTable savedOrderTable = createOrderTable(5, false);
+            final OrderCreateRequest expected = new OrderCreateRequest(savedOrderTable.getId(), List.of(
+                    new OrderCreateOrderLineItemRequest(savedMenu.getId(), 10)
             ));
-            final OrderTable savedOrderTable = orderTableDao.save(new OrderTable(null, 5, false));
-
-            final List<OrderLineItem> orderLineItems = List.of(new OrderLineItem(null, savedMenu.getId(), 10));
-
-            final Order expected = new Order(
-                    savedOrderTable.getId(),
-                    OrderStatus.COOKING.name(),
-                    LocalDateTime.now(),
-                    orderLineItems
-            );
 
             // when
-            final Order actual = orderService.create(expected);
+            final OrderResponse actual = orderService.create(expected);
 
             // then
             assertSoftly(softly -> {
                 softly.assertThat(actual.getId()).isPositive();
-                softly.assertThat(actual.getOrderTableId()).isEqualTo(expected.getOrderTableId());
-                softly.assertThat(actual.getOrderStatus()).isEqualTo(expected.getOrderStatus());
-                softly.assertThat(actual.getOrderedTime()).isEqualTo(expected.getOrderedTime());
-                softly.assertThat(actual.getOrderLineItems())
-                        .usingRecursiveComparison()
-                        .ignoringExpectedNullFields()
-                        .isEqualTo(expected.getOrderLineItems());
+                softly.assertThat(actual.getOrderTable().getId()).isEqualTo(expected.getOrderTableId());
+                softly.assertThat(actual.getOrderStatus()).isEqualTo(OrderStatus.COOKING);
+                softly.assertThat(actual.getOrderedTime()).isBefore(LocalDateTime.now());
+                softly.assertThat(actual.getOrderLineItems()).hasSize(expected.getOrderLineItems().size());
             });
         }
 
@@ -76,19 +67,15 @@ class OrderServiceTest extends ApplicationTestConfig {
         @Test
         void throwException_create_order_when_orderLineItemsIsEmpty() {
             // given
-            final OrderTable savedOrderTable = orderTableDao.save(new OrderTable(null, 5, false));
+            final OrderTable savedOrderTable = orderTableRepository.save(OrderTable.withoutTableGroup(5, false));
 
             // when
-            final List<OrderLineItem> wrongOrderLineItems = Collections.emptyList();
-            final Order expected = new Order(
-                    savedOrderTable.getId(),
-                    OrderStatus.COOKING.name(),
-                    LocalDateTime.now(),
-                    wrongOrderLineItems
-            );
+            final OrderCreateRequest request = new OrderCreateRequest(savedOrderTable.getId(), List.of(
+                    new OrderCreateOrderLineItemRequest(0, 10)
+            ));
 
             // then
-            assertThatThrownBy(() -> orderService.create(expected))
+            assertThatThrownBy(() -> orderService.create(request))
                     .isInstanceOf(IllegalArgumentException.class);
         }
 
@@ -96,28 +83,17 @@ class OrderServiceTest extends ApplicationTestConfig {
         @Test
         void throwException_create_order_when_orderLineItemsSize_IsNotEqualTo_menuCountsSize() {
             // given
-            final MenuGroup savedMenuGroup = menuGroupDao.save(new MenuGroup("테스트용 메뉴 그룹명"));
-            final Menu savedMenu = menuDao.save(new Menu(
-                    "테스트용 메뉴명",
-                    BigDecimal.ZERO,
-                    savedMenuGroup.getId(),
-                    Collections.emptyList()
-            ));
-            final OrderTable savedOrderTable = orderTableDao.save(new OrderTable(null, 5, false));
+            final Menu savedMenu = createMenu();
+            final OrderTable savedOrderTable = orderTableRepository.save(OrderTable.withoutTableGroup(5, false));
 
             // when
-            final Long wrongMenuId = null;
-            final List<OrderLineItem> orderLineItems = List.of(new OrderLineItem(null, wrongMenuId, 10));
-
-            final Order expected = new Order(
-                    savedOrderTable.getId(),
-                    OrderStatus.COOKING.name(),
-                    LocalDateTime.now(),
-                    orderLineItems
-            );
+            final OrderCreateRequest request = new OrderCreateRequest(savedOrderTable.getId(), List.of(
+                    new OrderCreateOrderLineItemRequest(savedMenu.getId(), 10),
+                    new OrderCreateOrderLineItemRequest(-1L, 10)
+            ));
 
             // then
-            assertThatThrownBy(() -> orderService.create(expected))
+            assertThatThrownBy(() -> orderService.create(request))
                     .isInstanceOf(IllegalArgumentException.class);
         }
 
@@ -125,29 +101,33 @@ class OrderServiceTest extends ApplicationTestConfig {
         @Test
         void throwException_create_order_when_orderTableIsNotExists() {
             // given
-            final MenuGroup savedMenuGroup = menuGroupDao.save(new MenuGroup("테스트용 메뉴 그룹명"));
-            final Menu savedMenu = menuDao.save(new Menu(
-                    "테스트용 메뉴명",
-                    BigDecimal.ZERO,
-                    savedMenuGroup.getId(),
-                    Collections.emptyList()
-            ));
-
-            final List<OrderLineItem> orderLineItems = List.of(new OrderLineItem(null, savedMenu.getId(), 10));
+            final Menu savedMenu = createMenu();
+            final OrderTable savedOrderTable = createOrderTable(10, true);
 
             // when
-            final Long wrongOrderTableId = null;
-            final Order expected = new Order(
-                    wrongOrderTableId,
-                    OrderStatus.COOKING.name(),
-                    LocalDateTime.now(),
-                    orderLineItems
-            );
+            final OrderCreateRequest request = new OrderCreateRequest(0, List.of(
+                    new OrderCreateOrderLineItemRequest(savedMenu.getId(), 10)
+            ));
 
             // then
-            assertThatThrownBy(() -> orderService.create(expected))
-                    .isInstanceOf(IllegalArgumentException.class);
+            assertThatThrownBy(() -> orderService.create(request))
+                    .isInstanceOf(EmptyResultDataAccessException.class);
         }
+    }
+
+    private Menu createMenu() {
+        final MenuGroup savedMenuGroup = menuGroupRepository.save(new MenuGroup(new Name("테스트용 메뉴 그룹명")));
+        return menuRepository.save(
+                Menu.withEmptyMenuProducts(
+                        new Name("테스트용 메뉴명"),
+                        Price.from("0"),
+                        savedMenuGroup
+                )
+        );
+    }
+
+    private OrderTable createOrderTable(final int numberOfGuests, final boolean empty) {
+        return orderTableRepository.save(OrderTable.withoutTableGroup(numberOfGuests, empty));
     }
 
     @DisplayName("주문 상태 변경")
@@ -158,44 +138,28 @@ class OrderServiceTest extends ApplicationTestConfig {
         @Test
         void success_changeOrderStatus() {
             // given
-            final MenuGroup savedMenuGroup = menuGroupDao.save(new MenuGroup("테스트용 메뉴 그룹명"));
-            final Menu savedMenu = menuDao.save(new Menu(
-                    "테스트용 메뉴명",
-                    BigDecimal.ZERO,
-                    savedMenuGroup.getId(),
-                    Collections.emptyList()
-            ));
-            final OrderTable savedOrderTable = orderTableDao.save(new OrderTable(null, 5, false));
+            final Menu savedMenu = createMenu();
+            final OrderTable savedOrderTable = createOrderTable(5, false);
 
-            final List<OrderLineItem> orderLineItems = List.of(new OrderLineItem(null, savedMenu.getId(), 10));
-
-            final Order order = new Order(
-                    savedOrderTable.getId(),
-                    OrderStatus.COOKING.name(),
-                    LocalDateTime.now(),
-                    orderLineItems
-            );
-            final Order savedOrder = orderService.create(order);
+            final Order order = Order.ofEmptyOrderLineItems(savedOrderTable);
+            final List<OrderLineItem> orderLineItems = new ArrayList<>(List.of(OrderLineItem.withoutOrder(savedMenu, new Quantity(10))));
+            order.addOrderLineItems(orderLineItems);
+            final Order savedOrder = orderRepository.save(order);
+            final OrderResponse expected = OrderResponse.from(savedOrder);
 
             // when
-            final Order expected = new Order(
-                    savedOrder.getOrderTableId(),
-                    OrderStatus.COMPLETION.name(),
-                    savedOrder.getOrderedTime(),
-                    savedOrder.getOrderLineItems()
-            );
-
-            final Order actual = orderService.changeOrderStatus(savedOrder.getId(), expected);
+            final OrderResponse actual = orderService.changeOrderStatus(expected.getId(), OrderStatus.MEAL.name());
 
             // then
             assertSoftly(softly -> {
                 softly.assertThat(actual.getId()).isPositive();
-                softly.assertThat(actual.getOrderTableId()).isEqualTo(expected.getOrderTableId());
-                softly.assertThat(actual.getOrderStatus()).isEqualTo(expected.getOrderStatus());
+                softly.assertThat(actual.getOrderTable())
+                        .usingRecursiveComparison()
+                        .isEqualTo(expected.getOrderTable());
+                softly.assertThat(actual.getOrderStatus()).isEqualTo(OrderStatus.MEAL);
                 softly.assertThat(actual.getOrderedTime()).isEqualTo(expected.getOrderedTime());
                 softly.assertThat(actual.getOrderLineItems())
                         .usingRecursiveComparison()
-                        .ignoringExpectedNullFields()
                         .isEqualTo(expected.getOrderLineItems());
             });
         }
@@ -203,76 +167,29 @@ class OrderServiceTest extends ApplicationTestConfig {
         @DisplayName("[EXCEPTION] 주문이 존재하지 않을 경우 예외가 발생한다.")
         @Test
         void throwException_when_order_isNotExists() {
-            // given
-            final MenuGroup savedMenuGroup = menuGroupDao.save(new MenuGroup("테스트용 메뉴 그룹명"));
-            final Menu savedMenu = menuDao.save(new Menu(
-                    "테스트용 메뉴명",
-                    BigDecimal.ZERO,
-                    savedMenuGroup.getId(),
-                    Collections.emptyList()
-            ));
-            final OrderTable savedOrderTable = orderTableDao.save(new OrderTable(null, 5, false));
-
-            final List<OrderLineItem> orderLineItems = List.of(new OrderLineItem(null, savedMenu.getId(), 10));
-
-            final Order order = new Order(
-                    savedOrderTable.getId(),
-                    OrderStatus.COOKING.name(),
-                    LocalDateTime.now(),
-                    orderLineItems
-            );
-            final Order savedOrder = orderService.create(order);
-
-            final Order updateOrder = new Order(
-                    savedOrder.getOrderTableId(),
-                    OrderStatus.COMPLETION.name(),
-                    savedOrder.getOrderedTime(),
-                    savedOrder.getOrderLineItems()
-            );
-
-            // then
-            final Long wrongOrderId = null;
-            assertThatThrownBy(() -> orderService.changeOrderStatus(wrongOrderId, updateOrder))
-                    .isInstanceOf(IllegalArgumentException.class);
+            final Long wrongOrderId = -1L;
+            assertThatThrownBy(() -> orderService.changeOrderStatus(wrongOrderId, OrderStatus.COOKING.name()))
+                    .isInstanceOf(EmptyResultDataAccessException.class);
         }
 
         @DisplayName("[EXCEPTION] 주문이 완료 상태에서 완료 상태로 변경할 경우 예외가 발생한다.")
         @Test
         void throwException_when_orderStatus_is_COMPLETION() {
             // given
-            final MenuGroup savedMenuGroup = menuGroupDao.save(new MenuGroup("테스트용 메뉴 그룹명"));
-            final Menu savedMenu = menuDao.save(new Menu(
-                    "테스트용 메뉴명",
-                    BigDecimal.ZERO,
-                    savedMenuGroup.getId(),
-                    Collections.emptyList()
-            ));
-            final OrderTable savedOrderTable = orderTableDao.save(new OrderTable(null, 5, false));
+            final Menu savedMenu = createMenu();
+            final OrderTable savedOrderTable = createOrderTable(5, false);
 
-            final List<OrderLineItem> orderLineItems = List.of(new OrderLineItem(null, savedMenu.getId(), 10));
+            final Order order = Order.ofEmptyOrderLineItems(savedOrderTable);
+            final List<OrderLineItem> orderLineItems = new ArrayList<>(List.of(OrderLineItem.withoutOrder(savedMenu, new Quantity(10))));
+            order.addOrderLineItems(orderLineItems);
+            final Order savedOrder = orderRepository.save(order);
 
             // when
-            final Order order = new Order(
-                    savedOrderTable.getId(),
-                    OrderStatus.MEAL.name(),
-                    LocalDateTime.now(),
-                    orderLineItems
-            );
-            final Order savedOrder = orderService.create(order);
-
-            final OrderStatus completion = OrderStatus.COMPLETION;
-            final Order updateOrder = new Order(
-                    savedOrder.getOrderTableId(),
-                    completion.name(),
-                    savedOrder.getOrderedTime(),
-                    savedOrder.getOrderLineItems()
-            );
-            orderService.changeOrderStatus(savedOrder.getId(), updateOrder);
+            orderService.changeOrderStatus(savedOrder.getId(), OrderStatus.COMPLETION.name());
 
             // then
-            assertThatThrownBy(() -> orderService.changeOrderStatus(savedOrder.getId(), updateOrder))
+            assertThatThrownBy(() -> orderService.changeOrderStatus(savedOrder.getId(), OrderStatus.COMPLETION.name()))
                     .isInstanceOf(IllegalArgumentException.class);
         }
-
     }
 }
